--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "uninas"
-version = "0.0.1"
-description = "Placeholder"
+version = "0.0.2"
+description = "string_to_model"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
     {name = "Ondrej Tybl", email = "ondra@tybl.cz"}
+]
+dependencies = [
+    "torch>=2.9.1",  # adjust version if needed
+    "timm>=1.0.24"    # adjust version if needed
 ]
