--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "uninas"
-version = "1.0.0"
-description = "initial working version for a random walk and model <> string conversions"
+version = "1.1.0"
+description = "model <> string conversions with json"
 readme = "README.md"
 requires-python = ">=3.11"
 authors = [
