--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,13 @@ authors = [
     {name = "Ondrej Tybl", email = "ondra@tybl.cz"}
 ]
 dependencies = [
-    "torch>=2.9.1",  # adjust version if needed
-    "timm>=1.0.24"    # adjust version if needed
+    "torch>=2.9.1",
+    "timm>=1.0.24"
 ]
+
+# Include non-Python files like examples
+[tool.setuptools.package-data]
+"uninas" = ["py.typed"]  # if you have type hints
+
+[tool.setuptools.exclude-package-data]
+"*" = ["examples/*"]  # exclude examples from being treated as packages
