--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,9 +16,5 @@ dependencies = [
     "timm>=1.0.24"
 ]
 
-# Include non-Python files like examples
 [tool.setuptools.package-data]
-"uninas" = ["py.typed"]  # if you have type hints
-
-[tool.setuptools.exclude-package-data]
-"*" = ["examples/*"]  # exclude examples from being treated as packages
+"uninas" = ["py.typed"]
